--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+          # cache: 'npm'
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm install 
+          # npm ci
       - name: Check types
         run: npm run typecheck
       - name: Lint
