--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qxip-test",
+  "name": "qxip-flow",
   "version": "1.0.0",
   "description": "Test plugin to lern dev enveroument",
   "scripts": {
