--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,9 @@ jobs:
           go-version: '1.19'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+           npm install
+           # npm ci
 
       - name: Build and test frontend
         run: npm run build
