--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qxip-flow",
+  "name": "qxip-flow-panel",
   "version": "1.0.1",
   "description": "Test plugin to lern dev enveroument",
   "scripts": {
