--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@grafana/ui": "9.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-json-view": "^1.21.3",
     "tslib": "2.5.0",
     "web-component-load": "^1.0.1"
   },
