--- a/ngx-flow/package.json
+++ b/ngx-flow/package.json
@@ -12,31 +12,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-builders/custom-webpack": "^12.0.2",
-    "@angular/animations": "~12.2.0",
-    "@angular/cdk": "^12.2.13",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/elements": "^12.2.16",
-    "@angular/forms": "~12.2.0",
-    "@angular/material": "^12.2.13",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
+    "@angular-builders/custom-webpack": "^11.1.0",
+    "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^15.2.9",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/elements": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/material": "^15.2.9",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
     "document-register-element": "^1.7.2",
     "is-in-subnet": "^4.0.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.38",
-    "rxjs": "~6.6.0",
+    "rxjs": "~7.8.1",
     "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.16",
-    "@angular/cli": "~12.2.16",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular-devkit/build-angular": "^16.2.10",
+    "@angular/cli": "^16.2.10",
+    "@angular/compiler-cli": "^16.2.12",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "concat": "^1.0.3",
@@ -47,7 +47,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "ng-packagr": "^12.1.1",
-    "typescript": "~4.3.5"
+    "ng-packagr": "^16.2.3",
+    "typescript": "~4.9.3"
   }
 }
