--- a/ngx-flow/package.json
+++ b/ngx-flow/package.json
@@ -1,53 +1,54 @@
 {
-  "name": "lib-flow",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "build:elements": "cd projects/elements && sh buildElements.sh",
-    "test": "ng test",
-    "build:component": "ng build lib-flow --configuration production --output-hashing none && node build-component.js"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular-builders/custom-webpack": "^11.1.0",
-    "@angular/animations": "^16.2.12",
-    "@angular/cdk": "^15.2.9",
-    "@angular/common": "^16.2.12",
-    "@angular/compiler": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "@angular/elements": "^16.2.12",
-    "@angular/forms": "^16.2.12",
-    "@angular/material": "^15.2.9",
-    "@angular/platform-browser": "^16.2.12",
-    "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/router": "^16.2.12",
-    "document-register-element": "^1.7.2",
-    "is-in-subnet": "^4.0.1",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.38",
-    "rxjs": "~7.8.1",
-    "ts-md5": "^1.3.1",
-    "tslib": "^2.3.0",
-    "zone.js": "^0.13.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.10",
-    "@angular/cli": "^16.2.10",
-    "@angular/compiler-cli": "^16.2.12",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
-    "concat": "^1.0.3",
-    "fs-extra": "^11.1.1",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "ng-packagr": "^16.2.3",
-    "typescript": "~4.9.3"
-  }
+    "name": "lib-flow",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "build:elements": "cd projects/elements && sh buildElements.sh",
+        "test": "ng test",
+        "build:component": "ng build lib-flow --configuration production --output-hashing none && node build-component.js"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular-builders/custom-webpack": "^11.1.0",
+        "@angular/animations": "^16.2.12",
+        "@angular/cdk": "^15.2.9",
+        "@angular/common": "^16.2.12",
+        "@angular/compiler": "^16.2.12",
+        "@angular/core": "^16.2.12",
+        "@angular/elements": "^16.2.12",
+        "@angular/forms": "^16.2.12",
+        "@angular/material": "^15.2.9",
+        "@angular/platform-browser": "^16.2.12",
+        "@angular/platform-browser-dynamic": "^16.2.12",
+        "@angular/router": "^16.2.12",
+        "document-register-element": "^1.7.2",
+        "html2canvas": "^1.4.1",
+        "is-in-subnet": "^4.0.1",
+        "moment": "^2.29.4",
+        "moment-timezone": "^0.5.38",
+        "rxjs": "~7.8.1",
+        "ts-md5": "^1.3.1",
+        "tslib": "^2.3.0",
+        "zone.js": "^0.13.0"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^16.2.10",
+        "@angular/cli": "^16.2.10",
+        "@angular/compiler-cli": "^16.2.12",
+        "@types/jasmine": "~3.8.0",
+        "@types/node": "^12.11.1",
+        "concat": "^1.0.3",
+        "fs-extra": "^11.1.1",
+        "jasmine-core": "~3.8.0",
+        "karma": "~6.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.0.3",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "~1.7.0",
+        "ng-packagr": "^16.2.3",
+        "typescript": "~4.9.3"
+    }
 }
