--- a/ngx-flow/package.json
+++ b/ngx-flow/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "html2canvas": "^1.4.1",
     "document-register-element": "^1.7.2",
     "is-in-subnet": "^4.0.1",
     "moment": "^2.29.4",
