--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           node-version: 16
           # cache: 'npm'
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli
       - name: Install dependencies
         run: |
           npm install 
