--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           go-version: '1.22'
 
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli
+        
       - name: Install dependencies
         run: |
            npm install
