--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,8 @@ jobs:
            cd ngx-flow
            npm install
            # npm ci
+      - name: Build Angular frontend
+        run: npm run build:component       
       - name: Build and test frontend
         run: npm run build
 
