--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "qxip-flow-panel",
-    "version": "10.0.11",
-    "description": "Test plugin to lern dev enveroument",
+    "version": "10.0.12",
+    "description": "Plugin providing Flow diagram for Grafana",
     "scripts": {
         "build": "cd ./ngx-flow && npm run build:component && cd .. && webpack -c ./.config/webpack/webpack.config.ts --env production",
         "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
