--- a/ngx-flow/package.json
+++ b/ngx-flow/package.json
@@ -31,7 +31,7 @@
     "rxjs": "~7.8.1",
     "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
-    "zone.js": "^0.13.0"
+    "zone.js": "^0.14.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.10",
@@ -48,6 +48,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^16.2.3",
-    "typescript": "~4.9.3"
+    "typescript": "^5.2.0"
   }
 }
