--- a/ngx-flow/package.json
+++ b/ngx-flow/package.json
@@ -8,36 +8,36 @@
     "watch": "ng build --watch --configuration development",
     "build:elements": "cd projects/elements && sh buildElements.sh",
     "test": "ng test",
-    "build:component": "ng build --prod --output-hashing none && node build-component.js"
+    "build:component": "ng build lib-flow --configuration production --output-hashing none && node build-component.js"
   },
   "private": true,
   "dependencies": {
-    "@angular-builders/custom-webpack": "^12.0.2",
-    "@angular/animations": "~12.2.0",
-    "@angular/cdk": "^12.2.13",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/elements": "^12.2.16",
-    "@angular/forms": "~12.2.0",
-    "@angular/material": "^12.2.13",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
+    "@angular-builders/custom-webpack": "^17.0.1",
+    "@angular/animations": "^17.3.1",
+    "@angular/cdk": "^17.3.1",
+    "@angular/common": "^17.3.1",
+    "@angular/compiler": "^17.3.1",
+    "@angular/core": "^17.3.1",
+    "@angular/elements": "^17.3.1",
+    "@angular/forms": "^17.3.1",
+    "@angular/material": "^17.3.1",
+    "@angular/platform-browser": "^17.3.1",
+    "@angular/platform-browser-dynamic": "^17.3.1",
+    "@angular/router": "^17.3.1",
     "html2canvas": "^1.4.1",
     "document-register-element": "^1.7.2",
     "is-in-subnet": "^4.0.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.38",
-    "rxjs": "~6.6.0",
+    "rxjs": "~7.8.1",
     "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.16",
-    "@angular/cli": "~12.2.16",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular-devkit/build-angular": "^17.3.2",
+    "@angular/cli": "^17.3.2",
+    "@angular/compiler-cli": "^17.3.1",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "concat": "^1.0.3",
@@ -48,7 +48,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "ng-packagr": "^12.1.1",
-    "typescript": "~4.3.5"
+    "ng-packagr": "^17.3.0",
+    "typescript": "^5.4.3"
   }
 }
