--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "qxip-flow-panel",
-    "version": "10.1.1",
+    "version": "10.2.0",
     "description": "Plugin providing Flow diagram for Grafana",
     "scripts": {
         "build:component": "cd ./ngx-flow && npm run build:component",
@@ -31,8 +31,8 @@
         "@testing-library/react": "^12.1.4",
         "@types/jest": "^29.5.0",
         "@types/lodash": "^4.14.194",
-        "@types/node": "^18.15.11",
         "@types/luxon": "^3.4.2",
+        "@types/node": "^18.15.11",
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.3",
         "eslint-webpack-plugin": "^4.0.1",
@@ -66,6 +66,8 @@
         "luxon": "^3.4.4",
         "pcap-generator": "^0.2.3",
         "react": "17.0.2",
+        "react-dnd": "^14.0.5",
+        "react-dnd-html5-backend": "^14.1.0",
         "react-dom": "17.0.2",
         "react-json-view": "^1.21.3",
         "tslib": "2.5.0",
