--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,3 +95,7 @@ jobs:
           name: cypress-videos
           path: cypress/videos
           retention-days: 5
+      - name: Install Jest
+        run: npm install -g jest
+      - name: Unit test
+        run: npm run test
