fix: adjust workflow to use correct script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,4 +98,4 @@ jobs:
       - name: Install Jest
         run: npm install -g jest
       - name: Unit test
-        run: npm run test
+        run: npm run test:ci
