--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@types/node": "^18.15.11",
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.3",
+        "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-webpack-plugin": "^4.0.1",
         "fork-ts-checker-webpack-plugin": "^8.0.0",
         "glob": "^10.1.0",
